@@ -1,6 +1,6 @@
 # Common Options Reference
 
-JetBrains IDE에서 자주 사용되는 성능 관련 VM 옵션.
+Performance-focused VM options commonly used in JetBrains IDEs.
 
 ## Table of Contents
 
@@ -9,29 +9,36 @@ JetBrains IDE에서 자주 사용되는 성능 관련 VM 옵션.
 3. [Diagnostics](#diagnostics)
 4. [Tiered Compilation](#tiered-compilation)
 5. [Thread Options](#thread-options)
+6. [Example Configurations](#example-configurations)
+7. [Example Output (Markdown)](#example-output-markdown)
 
 ---
 
 ## Compiler Options
 
-JIT 컴파일러 관련 옵션.
+JIT compiler-related options.
+
+Behavior: Controls compilation concurrency and thresholds.
+When it helps: Balancing startup responsiveness vs peak throughput.
 
 ### Core Flags
 
 | Flag | Default | Description |
 |------|---------|-------------|
-| `-XX:CICompilerCount=<n>` | varies | Number of compiler threads |
+| `-XX:CICompilerCount=<n>` | LP64 ergo (default when CICompilerCountPerCPU=true): max(log2(n) * log2(max(log2(n), 1)) * 3 / 2, 2), capped by code cache buffers; 32-bit default: 3 | Number of compiler threads |
 | `-XX:CompileThreshold=<n>` | 10000 | Invocations before compilation |
 | `-XX:+BackgroundCompilation` | true | Compile in background |
 | `-XX:+UseCompilerSafepoints` | true | Use safepoints in compiled code |
 
-### IDE Recommended
+Notes: `n` is `os::active_processor_count()` and `log2` is integer log2.
+
+### Example Configuration
 
 ```
 -XX:CICompilerCount=2
 ```
 
-Adjust based on CPU cores:
+Typical scaling by CPU cores:
 - 4 cores: `CICompilerCount=2`
 - 8+ cores: `CICompilerCount=3-4`
 
@@ -39,7 +46,10 @@ Adjust based on CPU cores:
 
 ## String Optimization
 
-문자열 처리 최적화.
+String processing optimizations.
+
+Behavior: Reduces duplicate String storage and optimizes concatenation.
+When it helps: Large projects with heavy String churn or memory pressure.
 
 ### Flags
 
@@ -49,7 +59,7 @@ Adjust based on CPU cores:
 | `-XX:+OptimizeStringConcat` | true | Optimize string concatenation |
 | `-XX:+CompactStrings` | true | Use compact strings (Latin-1) |
 
-### IDE Configuration
+### Example Configuration
 
 ```
 -XX:+UseStringDeduplication
@@ -63,7 +73,10 @@ Adjust based on CPU cores:
 
 ## Diagnostics
 
-문제 진단 및 디버깅 옵션.
+Diagnostics and debugging options.
+
+Behavior: Emits logs and dumps to help analyze crashes and GC behavior.
+When it helps: Investigating OOMs, GC pauses, or JVM crashes.
 
 ### Heap Dump
 
@@ -72,22 +85,41 @@ Adjust based on CPU cores:
 | `-XX:+HeapDumpOnOutOfMemoryError` | false | Dump heap on OOM |
 | `-XX:HeapDumpPath=<path>` | working dir | Heap dump location |
 
-### GC Logging
+### GC Logging (JDK 9+ Unified Logging)
 
 | Flag | Description |
 |------|-------------|
-| `-Xlog:gc*` | Basic GC logging (JDK 9+) |
+| `-Xlog:gc` | Basic GC logging |
+| `-Xlog:gc*` | Detailed GC logging |
 | `-Xlog:gc*:file=gc.log` | Log to file |
 | `-Xlog:gc*:file=gc.log:time,uptime` | With timestamps |
+| `-Xlog:gc*:file=gc.log:time,uptime:filecount=5,filesize=10m` | Rotating logs |
+
+### GC Logging Patterns
+
+| Pattern | Description |
+|---------|-------------|
+| `-Xlog:gc` | GC events only |
+| `-Xlog:gc+heap=debug` | GC + heap details |
+| `-Xlog:gc+phases=debug` | GC phase timings |
+| `-Xlog:gc*=debug:file=gc.log` | All GC debug info to file |
+| `-Xlog:gc+age=trace` | Object age distribution |
+
+### System.gc() Behavior
+
+| Flag | Default | Description |
+|------|---------|-------------|
+| `-XX:+ExplicitGCInvokesConcurrent` | false | System.gc() triggers concurrent GC |
+| `-XX:+DisableExplicitGC` | false | Ignore System.gc() calls |
 
 ### Error Handling
 
 | Flag | Default | Description |
 |------|---------|-------------|
-| `-XX:ErrorFile=<path>` | varies | Error log location |
+| `-XX:ErrorFile=<path>` | `hs_err_pid%p.log` in current working directory (unless ErrorFileToStdout/ErrorFileToStderr) | Error log location |
 | `-XX:+ShowMessageBoxOnError` | false | Show dialog on crash |
 
-### IDE Recommended
+### Example Configuration
 
 ```
 -XX:+HeapDumpOnOutOfMemoryError
@@ -98,7 +130,10 @@ Adjust based on CPU cores:
 
 ## Tiered Compilation
 
-단계별 컴파일 설정.
+Tiered compilation settings.
+
+Behavior: Trades startup speed for peak performance via tiered JIT levels.
+When it helps: Choosing faster startup vs sustained throughput.
 
 ### Flags
 
@@ -117,13 +152,13 @@ Adjust based on CPU cores:
 | 3 | C1 with full profiling |
 | 4 | C2 (full optimization) |
 
-### Fast Startup (Trade-off: Less optimization)
+### Example: Fast Startup (less optimization)
 
 ```
 -XX:TieredStopAtLevel=1
 ```
 
-### Maximum Performance (Default)
+### Example: Full Optimization (default behavior)
 
 ```
 -XX:+TieredCompilation
@@ -134,16 +169,19 @@ Adjust based on CPU cores:
 
 ## Thread Options
 
-스레드 관련 옵션.
+Thread-related options.
+
+Behavior: Controls thread stack size and GC thread counts.
+When it helps: Deep recursion, constrained memory, or GC thread tuning.
 
 ### Stack Size
 
 | Flag | Default | Description |
 |------|---------|-------------|
-| `-Xss<size>` | varies | Thread stack size |
-| `-XX:ThreadStackSize=<size>` | varies | Thread stack size (KB) |
+| `-Xss<size>` | Platform constant in `globals_<os>_<arch>.hpp` (KB); 0 means OS default (e.g., linux_x86_64=1024, bsd_x86_64=1024, linux_aarch64=2040, windows_*=0) | Thread stack size |
+| `-XX:ThreadStackSize=<size>` | Platform constant in `globals_<os>_<arch>.hpp` (KB); 0 means OS default (e.g., linux_x86_64=1024, bsd_x86_64=1024, linux_aarch64=2040, windows_*=0) | Thread stack size (KB) |
 
-### Recommended Values
+### Typical Values
 
 | Use Case | Stack Size |
 |----------|------------|
@@ -160,9 +198,9 @@ Adjust based on CPU cores:
 
 ---
 
-## Complete Common Configuration
+## Example Configurations
 
-### Standard IDE Setup
+### Example: Standard IDE Setup
 
 ```
 # Compiler
@@ -180,7 +218,7 @@ Adjust based on CPU cores:
 -XX:+TieredCompilation
 ```
 
-### Performance-Focused
+### Example: Performance-Focused
 
 ```
 # Compiler
@@ -202,7 +240,7 @@ Adjust based on CPU cores:
 -XX:+HeapDumpOnOutOfMemoryError
 ```
 
-### Minimal/Fast Startup
+### Example: Minimal/Fast Startup
 
 ```
 # Reduced compiler threads
@@ -213,4 +251,59 @@ Adjust based on CPU cores:
 
 # Smaller stack
 -Xss512k
+```
+
+---
+
+## Example Output (Markdown)
+
+Behavior: Outputs a Markdown snippet that includes `.vmoptions` lines in a code block.
+When it helps: Sharing a ready-to-use baseline without generating files.
+
+### Version 243+ with Generational ZGC (4GB)
+
+```
+# JetBrains IDE VM Options
+# Generated for version 243+ (JDK 21)
+
+# Memory
+-Xms2g
+-Xmx4g
+
+# Garbage Collector: Generational ZGC
+-XX:+UseZGC
+-XX:+ZGenerational
+
+# Performance
+-XX:ReservedCodeCacheSize=512m
+-XX:+UseStringDeduplication
+-XX:SoftRefLRUPolicyMSPerMB=50
+
+# Miscellaneous
+-XX:+HeapDumpOnOutOfMemoryError
+-XX:CICompilerCount=2
+```
+
+### Version 242 with G1GC (6GB)
+
+```
+# JetBrains IDE VM Options
+# Generated for version 222-242 (JDK 17)
+
+# Memory
+-Xms2g
+-Xmx6g
+
+# Garbage Collector: G1GC
+-XX:+UseG1GC
+-XX:MaxGCPauseMillis=200
+
+# Performance
+-XX:ReservedCodeCacheSize=512m
+-XX:+UseStringDeduplication
+-XX:SoftRefLRUPolicyMSPerMB=50
+
+# Miscellaneous
+-XX:+HeapDumpOnOutOfMemoryError
+-XX:CICompilerCount=2
 ```
